Bug 128618 - FILESAVE XLSX Deleted automatic title of chart returns on save
Summary: FILESAVE XLSX Deleted automatic title of chart returns on save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-11-06 09:12 UTC by NISZ LibreOffice Team
Modified: 2019-11-11 12:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (18.38 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-11-06 09:20 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (14.95 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-11-06 09:21 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Excel (51.36 KB, image/png)
2019-11-06 09:21 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-06 09:12:56 UTC
Description:
Attached Excel-made example file has a simple chart with its default title deleted. On saving this file the title is displayed again.

Steps to Reproduce:
1.	Create a chart in Excel and delete its title
2.	Save the file and open in Calc
3.	The title is not displayed.
4.	Save the file from Calc and reopen it.


Actual Results:
The title is displayed.

Expected Results:
The title should stay deleted.


Reproducible: Always


User Profile Reset: No



Additional Info:
Bibisected using bibisect-win64-6.4 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=96a29c12a9d8734c9d2a812f38fc6654b5df9c48 
author	Balazs Varga <balazs.varga991@gmail.com>	2019-08-15 11:25:02 +0200
committer	László Németh <nemeth@numbertext.org>	2019-08-21 10:10:08 +0200
summary: tdf#101322 Chart OOXML Export: fix missing subtitle

LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: f0340d58cc0f2808ce8003099ff2a0495360f267
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Does not happen in:
Verzió: 6.3.0.4 (x86)
Build az.: 057fc023c990d676a43019934386b85b21a9ee99
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-11-06 09:20:26 UTC
Created attachment 155553 [details]
Example file from Excel
Comment 2 NISZ LibreOffice Team 2019-11-06 09:21:29 UTC
Created attachment 155554 [details]
The original file saved by Calc
Comment 3 NISZ LibreOffice Team 2019-11-06 09:21:55 UTC
Created attachment 155555 [details]
Screenshot of the original and exported document side by side in Excel
Comment 4 NISZ LibreOffice Team 2019-11-06 09:23:02 UTC
Adding CC to: Balazs Varga
Comment 5 Commit Notification 2019-11-08 12:20:39 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6437b3a98256cd2782164fedefbc109bf5ab114

tdf#128618 OOXML chart export: deleted automatic title returns on save

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-11-11 12:36:16 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: fea5c10e222b10d83e0081dc1d1b2e678689d250
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!!